--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body { background:linear-gradient(to right, rgb(168, 255, 120), rgb(120, 255, 21
     </filter>
   </defs>
 </svg>
-<script src="jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
 $(document).mousemove(function(e){
   //Get 'container' offset:
